# connectfour

./: .coveragerc  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti6.md
dokumentaatio/testikattavuus/: coveragereport_17_9
dokumentaatio/viikkoraportit/: viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md
src/: functions.py  index.py  main.py  minimax_a_b.py  ui.py
src/tests/: functions_test.py  minimax_a_b_test.py
